// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Alt 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding-left: 0.125rem;
  padding-right: 0.125rem;
  border-radius: 0.125rem;
  background-color: rgb(225,230,243);
  color: rgb(62,67,87);
}

<div>
  <div
    class="sw-flex sw-gap-1"
  >
    <span
      class=" emotion-0 emotion-1"
    >
      Alt
    </span>
  </div>
</div>
`;

exports[`should render ArrowDown 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding-left: 0.125rem;
  padding-right: 0.125rem;
  border-radius: 0.125rem;
  background-color: rgb(225,230,243);
  color: rgb(62,67,87);
}

<div>
  <div
    class="sw-flex sw-gap-1"
  >
    <span
      class=" emotion-0 emotion-1"
    >
      <svg
        aria-hidden="true"
        class="octicon octicon-triangle-down"
        fill="currentColor"
        focusable="false"
        height="16"
        style="display: inline-block; user-select: none; vertical-align: middle; overflow: visible;"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          d="m4.427 7.427 3.396 3.396a.25.25 0 0 0 .354 0l3.396-3.396A.25.25 0 0 0 11.396 7H4.604a.25.25 0 0 0-.177.427Z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`should render ArrowLeft 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding-left: 0.125rem;
  padding-right: 0.125rem;
  border-radius: 0.125rem;
  background-color: rgb(225,230,243);
  color: rgb(62,67,87);
}

<div>
  <div
    class="sw-flex sw-gap-1"
  >
    <span
      class=" emotion-0 emotion-1"
    >
      <svg
        aria-hidden="true"
        class="octicon octicon-triangle-left"
        fill="currentColor"
        focusable="false"
        height="16"
        style="display: inline-block; user-select: none; vertical-align: middle; overflow: visible;"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          d="M9.573 4.427 6.177 7.823a.25.25 0 0 0 0 .354l3.396 3.396a.25.25 0 0 0 .427-.177V4.604a.25.25 0 0 0-.427-.177Z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`should render ArrowRight 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding-left: 0.125rem;
  padding-right: 0.125rem;
  border-radius: 0.125rem;
  background-color: rgb(225,230,243);
  color: rgb(62,67,87);
}

<div>
  <div
    class="sw-flex sw-gap-1"
  >
    <span
      class=" emotion-0 emotion-1"
    >
      <svg
        aria-hidden="true"
        class="octicon octicon-triangle-right"
        fill="currentColor"
        focusable="false"
        height="16"
        style="display: inline-block; user-select: none; vertical-align: middle; overflow: visible;"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          d="m6.427 4.427 3.396 3.396a.25.25 0 0 1 0 .354l-3.396 3.396A.25.25 0 0 1 6 11.396V4.604a.25.25 0 0 1 .427-.177Z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`should render ArrowUp 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding-left: 0.125rem;
  padding-right: 0.125rem;
  border-radius: 0.125rem;
  background-color: rgb(225,230,243);
  color: rgb(62,67,87);
}

<div>
  <div
    class="sw-flex sw-gap-1"
  >
    <span
      class=" emotion-0 emotion-1"
    >
      <svg
        aria-hidden="true"
        class="octicon octicon-triangle-up"
        fill="currentColor"
        focusable="false"
        height="16"
        style="display: inline-block; user-select: none; vertical-align: middle; overflow: visible;"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          d="m4.427 9.573 3.396-3.396a.25.25 0 0 1 .354 0l3.396 3.396a.25.25 0 0 1-.177.427H4.604a.25.25 0 0 1-.177-.427Z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`should render Click 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding-left: 0.125rem;
  padding-right: 0.125rem;
  border-radius: 0.125rem;
  background-color: rgb(225,230,243);
  color: rgb(62,67,87);
}

<div>
  <div
    class="sw-flex sw-gap-1"
  >
    <span
      class=" emotion-0 emotion-1"
    >
      click
    </span>
  </div>
</div>
`;

exports[`should render Command 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding-left: 0.125rem;
  padding-right: 0.125rem;
  border-radius: 0.125rem;
  background-color: rgb(225,230,243);
  color: rgb(62,67,87);
}

<div>
  <div
    class="sw-flex sw-gap-1"
  >
    <span
      class=" emotion-0 emotion-1"
    >
      ⌘
    </span>
  </div>
</div>
`;

exports[`should render Control 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding-left: 0.125rem;
  padding-right: 0.125rem;
  border-radius: 0.125rem;
  background-color: rgb(225,230,243);
  color: rgb(62,67,87);
}

<div>
  <div
    class="sw-flex sw-gap-1"
  >
    <span
      class=" emotion-0 emotion-1"
    >
      Ctrl
    </span>
  </div>
</div>
`;

exports[`should render Option 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding-left: 0.125rem;
  padding-right: 0.125rem;
  border-radius: 0.125rem;
  background-color: rgb(225,230,243);
  color: rgb(62,67,87);
}

<div>
  <div
    class="sw-flex sw-gap-1"
  >
    <span
      class=" emotion-0 emotion-1"
    >
      ⌥
    </span>
  </div>
</div>
`;

exports[`should render a default text if no keys match 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding-left: 0.125rem;
  padding-right: 0.125rem;
  border-radius: 0.125rem;
  background-color: rgb(225,230,243);
  color: rgb(62,67,87);
}

<div>
  <div
    class="sw-flex sw-gap-1"
  >
    <span
      class=" emotion-0 emotion-1"
    >
      Ctrl
    </span>
    <span>
      +
    </span>
    <span
      class=" emotion-0 emotion-1"
    >
      click
    </span>
  </div>
</div>
`;

exports[`should render multiple keys 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding-left: 0.125rem;
  padding-right: 0.125rem;
  border-radius: 0.125rem;
  background-color: rgb(225,230,243);
  color: rgb(62,67,87);
}

<div>
  <div
    class="sw-flex sw-gap-1"
  >
    <span
      class="sw-px-1 emotion-0 emotion-1"
    >
      Use
    </span>
    <span
      class=" emotion-0 emotion-1"
    >
      Ctrl
    </span>
    <span>
      +
    </span>
    <span
      class=" emotion-0 emotion-1"
    >
      <svg
        aria-hidden="true"
        class="octicon octicon-triangle-up"
        fill="currentColor"
        focusable="false"
        height="16"
        style="display: inline-block; user-select: none; vertical-align: middle; overflow: visible;"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          d="m4.427 9.573 3.396-3.396a.25.25 0 0 1 .354 0l3.396 3.396a.25.25 0 0 1-.177.427H4.604a.25.25 0 0 1-.177-.427Z"
        />
      </svg>
    </span>
    <span
      class=" emotion-0 emotion-1"
    >
      <svg
        aria-hidden="true"
        class="octicon octicon-triangle-down"
        fill="currentColor"
        focusable="false"
        height="16"
        style="display: inline-block; user-select: none; vertical-align: middle; overflow: visible;"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          d="m4.427 7.427 3.396 3.396a.25.25 0 0 0 .354 0l3.396-3.396A.25.25 0 0 0 11.396 7H4.604a.25.25 0 0 0-.177.427Z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`should render multiple keys with non-key symbols 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding-left: 0.125rem;
  padding-right: 0.125rem;
  border-radius: 0.125rem;
  background-color: rgb(225,230,243);
  color: rgb(62,67,87);
}

<div>
  <div
    class="sw-flex sw-gap-1"
  >
    <span
      class=" emotion-0 emotion-1"
    >
      Ctrl
    </span>
    <span>
      +
    </span>
    <span
      class=" emotion-0 emotion-1"
    >
      <svg
        aria-hidden="true"
        class="octicon octicon-triangle-down"
        fill="currentColor"
        focusable="false"
        height="16"
        style="display: inline-block; user-select: none; vertical-align: middle; overflow: visible;"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          d="m4.427 7.427 3.396 3.396a.25.25 0 0 0 .354 0l3.396-3.396A.25.25 0 0 0 11.396 7H4.604a.25.25 0 0 0-.177.427Z"
        />
      </svg>
    </span>
    <span
      class=" emotion-0 emotion-1"
    >
      <svg
        aria-hidden="true"
        class="octicon octicon-triangle-up"
        fill="currentColor"
        focusable="false"
        height="16"
        style="display: inline-block; user-select: none; vertical-align: middle; overflow: visible;"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          d="m4.427 9.573 3.396-3.396a.25.25 0 0 1 .354 0l3.396 3.396a.25.25 0 0 1-.177.427H4.604a.25.25 0 0 1-.177-.427Z"
        />
      </svg>
    </span>
  </div>
</div>
`;
